--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "nodemon src/index.js",
+    "test": "nodemon app.js",
     
     
-    "start": "node src/index.js"
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
